syntax = "proto3";

package kong.admin.model.v1;

import "google/api/field_behavior.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/kong/koko/internal/gen/grpc/kong/admin/model/v1;v1";

message Certificate {
  string id = 1;
  int32 created_at = 2;
  int32 updated_at = 3;
  string cert = 4 [
    (google.api.field_behavior) = REQUIRED,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "PEM encoded certificate"
    }
  ];
  string key = 5 [
    (google.api.field_behavior) = REQUIRED,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "PEM encoded private key"
    }
  ];
  string cert_alt = 6 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "PEM encoded certificate"
  }];
  string key_alt = 7 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "PEM encoded private key"
  }];
  repeated string tags = 8;
}
